--- a/about_us.html
+++ b/about_us.html
@@ -28,20 +28,20 @@
  <div class ="top">
   	<div class="top_span"></div>
 		<div class="top_left">
-			<img src="./files/logo.jpg" style="width:310px;height:70px;">
+			<img src="./files/logo1.jpg" style="width:340px;height:70px;">
 		</div>	
    	<!--导航栏 菜单 前面图片 后面导航-->
 		<div class="top_right">
-		  <div class="nav_top" >
+<!-- 		  <div class="nav_top" >
 		  	<span class="language_right">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		  	</span>
-		 	<a>简体中文</a> | <a> English</a> 
+		  	</span> -->
+		 	<a>简体中文</a> | <a> English</a> <br> 
 		  </div>
-		  <br>
+		   <br> 
 		  <div id="nav_down">
 		  
 			<div id="nav">
@@ -86,8 +86,8 @@
     </div>
     </div>
 		</div>		
-  </div>  
-  <br>
+ <!--  </div>   -->
+ <br> 
 		 <!-- 内容 导航栏下图片 -->
   <div id="banner" style="width=960px;"> 
   	<div class="imgs">
@@ -161,15 +161,49 @@
 					<div>
 						<br><br>
 						<p>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 1997成立以来的上海加鑫净化设备有限公司一直专注于过滤行业，至今迈过了二十年的历程。”加鑫“从一开始专业进口高端过滤原材料（我们的PET材料、PP材料、PE材料克重最薄达到4.5g/m2 ，厚度最薄达到7μm），发展到自主研发、制作各类过滤膜、过滤器。我们的过滤膜主要有PTFE原膜、PTFE+PET/+PP/+PE复合膜、PVDF膜（亲水/疏水）、尼龙6、尼龙66滤膜；过滤器主要有除尘过滤袋、空气过滤器各类产品。这些过滤材料与产品广泛应用于冶金、石油、水利、机械、电子、食品、医药、环保、养生理疗等多种行业。这里特别需要提到的是，一些原材料（细丝、绢丝）还被运用于装帧装饰领域。公司在不断拓展中建立了完备的仓储系统和过滤技术研发基地。
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;创始于1993年，上海加鑫净化设备有限公司一直专注于过滤材料行业，至今迈过了二十年的历程。“加鑫”从一开始专业进口高端过滤原材料，发展到自主研发、制作各类过滤膜、过滤器。我们的过滤膜主要有PTFE原膜、<br>PTFE+PET/+PP/+PE复合膜、PVDF膜（亲水/疏水）、尼龙6、尼龙66滤膜；过滤器主要有除尘过滤袋、空气过滤器各类产品。这些过滤材料与产品广泛应用于冶金、石油、水利、机械、电子、食品、医药、环保、养生理疗等多种行业。公司在不断拓展中建立了完备的仓储系统和过滤技术研发基地。
 						</p>
 						<p>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	公司致力于发展同美国、德国、日本等世界技术先进国家的合作，在主营进口过滤材料的基础上制作了一系列高端的过滤产品，超出了国内同类产品的质量，有些已达到了世界先进标准。借助二十年来在过滤原材料方面的资源与技术优势，不断发展创新、开拓进取。
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;公司致力于发展同美国、德国、日本等世界技术先进国家的合作，在主营进口过滤材料的基础上制作了一系列高端的过滤产品，超出了国内同类产品的质量，有些已达到了世界先进标准。借助二十年来在过滤原材料方面的资源与技术优势，不断发展创新、开拓进取。
 						</p>
 						<p>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;目前公司和多家专业生产企业合作，由原材料延伸至电磁屏蔽材料，开辟了电磁屏蔽材料的系列制作基地，借助原材料的优势，已成功制作了符合世界标准的导电布、导电无纺布、导电海棉、系列成品，广泛应用于智能手机、掌上电脑、平板电脑、数码相机、摄（录）像机、信息网络系统、导航仪、LCD显示器、PDP电视、机顶盒、电缆屏蔽、医疗仪器等电子产品以及军工、航天领域。
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;目前公司和多家专业生产企业合作，由原材料延伸至电磁屏蔽材料，开辟了电磁屏蔽材料的系列制作基地，借助原材料的优势，已成功制作了符合世界标准的导电布、导电无纺布、导电海棉等系列成品，广泛应用于智能手机、掌上电脑、平板电脑、数码相机、摄（录）像机、信息网络系统、导航仪、LCD显示器、PDP电视、机顶盒、电缆屏蔽、医疗仪器等电子产品以及军工、航天领域。 
 						</p>
-						<br><br><br><br><br><br><br><br><br>
+						<br>
+						<p>
+							<b>目前公司主营业务分两大类：</b> <br>				
+							
+							<table>
+								<tr>
+									<td>一、EMI/EMC电子材料：</td>
+									<td>导电布（厚度16-150μm，有黑色导电布、防渗漏导电布及其他功能性导电布等产品）</td>
+								</tr>
+								<tr>
+									<td></td>
+									<td>导电无纺布（厚度10-60μm）</td>
+								</tr>
+								<tr>
+									<td></td>
+									<td>导电泡棉（厚度0.3-2.5mm）</td>
+								</tr>
+							</table>
+							<br>
+							<table>
+								<tr>
+									<td>二、过滤材料行业：</td>
+									<td>空气过滤膜(原膜、无纺布贴合膜)</td>
+								</tr>
+								<tr>
+									<td></td>
+									<td>液体过滤膜(原膜、无纺布贴合膜)</td>
+								</tr>
+								<tr>
+									<td></td>
+									<td>PTFE尼龙6尼龙66及PVDF膜</td>
+								</tr>
+							</table>
+							<br><br><br><br>
+						</p>
 					</div>
 				</div>
 		</div>
@@ -231,7 +265,7 @@
           Total 0.00694(s) query 1, Time now is:2016-03-09 22:11
           <br>
         </span>
-        Copyright 2015-2016 © Shanghai Jiaxin Purification Equipment Co,. Ltd &nbsp; &nbsp; 沪ICP备16004806号-1
+        Copyright 2015-2018 © Shanghai Jiaxin Purification Equipment Co,. Ltd &nbsp; &nbsp; 沪ICP备16004806号-1
       </div>
    	</div>
  
