--- a/products/products5/bak/products5_1.html
+++ b/products/products5/bak/products5_1.html
@@ -144,7 +144,7 @@
 			
 			<div class="left" style="background:url(../../files/images/pro.jpg) 0px 0px no-repeat;">
 				<div class="title">
-						<dt>产品与服务 </dt>
+						<dt><a href="../products/products.html"> <font color="#FFFFFF">产品与服务</font> </a> </dt>
 				</div>
 					<div  class="inbox" id="navigation">
 						<ul id ="listUL">
