--- a/products/products6/products6.html
+++ b/products/products6/products6.html
@@ -54,17 +54,17 @@
 		<div class ="top">
   		<div class="top_span"></div>
 		<div class="top_left">
-				<img src="../../files/logo.jpg" style="width:310px;height:70px;">
+				<img src="../../files/logo1.jpg" style="width:340px;height:70px;">
 		</div>	
    	<!--导航栏 菜单 前面图片 后面导航-->
 		<div class="top_right">
-		  <div class="nav_top" >
+	<!-- 	  <div class="nav_top" >
 		  	<span class="language_right">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		  	</span>
+		  	</span> -->
 		 	<a>简体中文</a> | <a> English</a> 
 		  </div>
 		  <br>
@@ -125,7 +125,7 @@
 		<div class="product_introduction">
 		<div class="left" style="background:url(../../files/images/pro.jpg) 0px 0px no-repeat;">
 				<div class="title">
-						<dt>产品与服务 </dt>
+						<dt><a href="../../products/products.html"> <font color="#FFFFFF">产品与服务</font> </a> </dt>
 				</div>
 					<div  class="inbox" id="navigation">
 						<ul id ="listUL">
@@ -142,9 +142,9 @@
 							<li>
 								<a style="background-color:#9999ff;" href="../products5/products5.html">过滤设备及解决方案</a>
 							</li>
-							<li>
+					<!-- 	<li>
 								<a style="background-color:#9999ff;" href="#">进口装帧装饰原材料</a>
-							</li>
+							</li> update version_20180413 -->
 							<li ><a style="background-color:#9999ff;"  href="javascript:;">服务与支持</a>
 								<ul class="sideMenu">
 									<li class="item" ><a href="../../news.html">&nbsp;&nbsp;&nbsp;&nbsp;行业资讯</a></li>
@@ -424,7 +424,7 @@
           Total 0.00694(s) query 1, Time now is:2016-03-09 22:11
           <br>
         </span>
-        Copyright 2015-2016 © Shanghai Jiaxin Purification Equipment Co,. Ltd &nbsp; &nbsp; <a href="http://www.beianbeian.com/" >沪ICP备16004806号-1</a>
+        Copyright 2015-2018 © Shanghai Jiaxin Purification Equipment Co,. Ltd &nbsp; &nbsp; <a href="http://www.beianbeian.com/" >沪ICP备16004806号-1</a>
       </div>
    	</div>
  
