--- a/contact_us.html
+++ b/contact_us.html
@@ -23,17 +23,17 @@
  <div class ="top">
   	<div class="top_span"></div>
 		<div class="top_left">
-			<img src="./files/logo.jpg" style="width:310px;height:70px;">
+			<img src="./files/logo1.jpg" style="width:340px;height:70px;">
 		</div>	
    	<!--导航栏 菜单 前面图片 后面导航-->
 		<div class="top_right">
-		  <div class="nav_top" >
-		  	<span class="language_right">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<!--	  <div class="nav_top" >
+ 		  	<span class="language_right">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		  	</span>
+		  	</span> -->
 		 	<a>简体中文</a> | <a> English</a> 
 		  </div>
 		  <br>
@@ -90,7 +90,7 @@
   	</div> 
   </div>
 		
-		</div>
+		<!-- </div> -->
 		<div class="contact_us">
 			<div class="left" style="background:url(http://www.shjiaxin.com//files/images/pro.jpg) 0px 0px no-repeat;">
 				<div class="title">
@@ -217,7 +217,7 @@
           Total 0.00694(s) query 1, Time now is:2016-03-09 22:11
           <br>
         </span>
-        Copyright 2015-2016 © Shanghai Jiaxin Purification Equipment Co,. Ltd &nbsp; &nbsp; 沪ICP备16004806号-1
+        Copyright 2015-2018 © Shanghai Jiaxin Purification Equipment Co,. Ltd &nbsp; &nbsp; 沪ICP备16004806号-1
       </div>
    	</div>
 
