--- a/message.html
+++ b/message.html
@@ -29,16 +29,16 @@
 		</div>	
    	<!--导航栏 菜单 前面图片 后面导航-->
 		<div class="top_right">
-		  <div class="nav_top" >
+<!-- 		<div class="nav_top" >
 		  	<span class="language_right">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		  	</span>
+		  	</span> -->
 		 	<a>简体中文</a> | <a> English</a> 
 		  </div>
-		  <br>
+		 <!--  <br> -->
 		  <div id="nav_down">
 		  
 			<div id="nav">
@@ -239,7 +239,7 @@
           Total 0.00694(s) query 1, Time now is:2016-03-09 22:11
           <br>
         </span>
-        Copyright 2015-2016 © Shanghai Jiaxin Purification Equipment Co,. Ltd &nbsp; &nbsp; 沪ICP备16004806号-1
+        Copyright 2015-2018 © Shanghai Jiaxin Purification Equipment Co,. Ltd &nbsp; &nbsp; 沪ICP备16004806号-1
       </div>
    	</div>
 
