--- a/news.html
+++ b/news.html
@@ -33,17 +33,17 @@
  <div class ="top">
   	<div class="top_span"></div>
 		<div class="top_left">
-			<img src="./files/logo.jpg" style="width:310px;height:70px;">
+			<img src="./files/logo1.jpg" style="width:340px;height:70px;">
 		</div>	
    	<!--导航栏 菜单 前面图片 后面导航-->
 		<div class="top_right">
-		  <div class="nav_top" >
+	<!-- 	<div class="nav_top" >
 		  	<span class="language_right">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		  	</span>
+		  	</span> -->
 		 	<a>简体中文</a> | <a> English</a> 
 		  </div>
 		  <br>
@@ -93,7 +93,7 @@
 		</div>		
   </div>   
 		 <!-- 内容 导航栏下图片 -->
-  <br>
+ <!--  <br> -->
   <div id="banner" style="width=960px;"> 
   	<div class="imgs">
   		<a>	<img src="./files/images/site/news.jpg" alt="" width="100%">	</a>
@@ -200,7 +200,7 @@
           Total 0.00694(s) query 1, Time now is:2016-03-09 22:11
           <br>
         </span>
-        Copyright 2015-2016 © Shanghai Jiaxin Purification Equipment Co,. Ltd &nbsp; &nbsp; <a href="http://www.beianbeian.com/" >沪ICP备16004806号-1</a>
+        Copyright 2015-2018 © Shanghai Jiaxin Purification Equipment Co,. Ltd &nbsp; &nbsp; <a href="http://www.beianbeian.com/" >沪ICP备16004806号-1</a>
       </div>
    	</div>
  
