--- a/products/products.html
+++ b/products/products.html
@@ -54,17 +54,17 @@
 		<div class ="top">
   		<div class="top_span"></div>
 		<div class="top_left">
-				<img src="../files/logo.jpg" style="width:310px;height:70px;">
+				<img src="../files/logo1.jpg" style="width:340px;height:70px;">
 		</div>	
    	<!--导航栏 菜单 前面图片 后面导航-->
 		<div class="top_right">
-		  <div class="nav_top" >
+<!-- 		  <div class="nav_top" >
 		  	<span class="language_right">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		  	</span>
+		  	</span> -->
 		 	<a>简体中文</a> | <a> English</a> 
 		  </div>
 		  <br>
@@ -125,11 +125,11 @@
 		<div class="product_introduction">
 		<div class="left" style="background:url(../files/images/pro.jpg) 0px 0px no-repeat;">
 				<div class="title">
-						<dt>产品与服务 </dt>
+						<dt><a href="../products/products.html"> <font color="#FFFFFF">产品与服务</font> </a> </dt>
 				</div>
 					<div  class="inbox" id="navigation">
 						<ul id ="listUL">
-							<li><a style="background-color:#9999ff;" href="javascript:;">EMC/EMI 电子材料解决方案</a>
+							<li><a style="background-color:#9999ff;" href="javascript:;">EMI/EMC电子材料</a>
 								<ul class="sideMenu">
 									<li ><a href="./products1/products1.html">&nbsp;&nbsp;&nbsp;&nbsp;导电布 </a></li>
 									<li ><a href="./products2/products2.html">&nbsp;&nbsp;&nbsp;&nbsp;导电无纺布 </a></li>
@@ -137,14 +137,16 @@
 								</ul>
 							</li>
 							<li>
-								<a style="background-color:#9999ff;"  href="./products4/products4.html">过滤膜</a>
+								<a style="background-color:#9999ff;"  href="./products4/products4.html">过滤材料行业</a>
 							</li>
 							<li>
-								<a style="background-color:#9999ff;" href="./products5/products5.html">过滤设备及解决方案</a>
+					 	<a style="background-color:#9999ff;" href="./products5/products5.html">过滤设备及解决方案</a>
 							</li>
-							<li>
+					<!--	<li>
 								<a style="background-color:#9999ff;" href="./products6/products6.html">进口装帧装饰原材料</a>
 							</li>
+							update version_20180413
+							 -->
 							<li ><a style="background-color:#9999ff;"  href="javascript:;">服务与支持</a>
 								<ul class="sideMenu">
 									<li class="item" ><a href="../news.html">&nbsp;&nbsp;&nbsp;&nbsp;行业资讯</a></li>
@@ -196,23 +198,23 @@
 					</tr>
 					<tr class="tr_block2">
 						<td colspan="5" id="td_border2"> </td>
-						<td colspan="5" id="td_border2"> <a href="./products1/products1.html">导电布</a></td>
+						<td colspan="5" id="td_border2"> <a href="./products1/products1.html">导电布（厚度16-150μm，有黑色导电布、防渗漏导电布及其他功能性导电布等产品）</a></td>
 					</tr>
 					<tr>
-						<td colspan="5" id="td_border2"> EMC/EMI 电子材料解决方案</td>
-						<td colspan="5" id="td_border2"><a href="./products2/products2.html"> 导电无纺布</a></td>
+						<td colspan="5" id="td_border2"> EMI/EMC电子材料</td>
+						<td colspan="5" id="td_border2"><a href="./products2/products2.html"> 导电无纺布（厚度10-60μm）</a></td>
 					</tr>
 					<tr class="tr_block2">
 						<td colspan="5" id="td_border2" class="td_border2_bottom"> </td>
-						<td colspan="5" id="td_border2" class="td_border2_bottom"><a href="./products3/products3.html">导电海棉</a> </td>
+						<td colspan="5" id="td_border2" class="td_border2_bottom"><a href="./products3/products3.html">导电泡棉（厚度0.3-2.5mm）</a> </td>
 					</tr>
 					<tr>
 						<td colspan="5" id="td_border2"> </td>
 						<td colspan="5" id="td_border2"> <a href="./products4/products4.html">空气过滤膜(原膜、无纺布贴合膜)</a></td>
 					</tr>
 					<tr class="tr_block2">
-						<td colspan="5" id="td_border2"> 过滤膜</td>
-						<td colspan="5" id="td_border2"><a href="./products4/products4.html"> 液体过滤膜(原膜、无纺布贴合膜)</a></td>
+						<td colspan="5" id="td_border2"> 过滤材料行业</td>
+						<td colspan="5" id="td_border2"><a href="./products4/products4.html">液体过滤膜(原膜、无纺布贴合膜)</a></td>
 					</tr>
 					<tr>
 						<td colspan="5" id="td_border2" class="td_border2_bottom"> </td>
@@ -222,10 +224,11 @@
 						<td colspan="5" id="td_border2" class="td_border2_bottom"> 过滤设备及解决方案</td>
 						<td colspan="5" id="td_border2" class="td_border2_bottom"> <a href="./products5/products5.html">过滤设备及解决方案</a></td>
 					</tr> 
-					<tr >
+			<!-- 	<tr >
 						<td colspan="5" id="td_border2"> 进口装帧装饰原材料</td>
 						<td colspan="5" id="td_border2"><a href="./products6/products6.html">进口装帧装饰原材料绢丝（直丝）</a> </td>
-					</tr> 
+					</tr>  update version_20180413
+					 -->
 				</table>
 			</div>
 		<br><br><br>
@@ -276,7 +279,7 @@
           Total 0.00694(s) query 1, Time now is:2016-03-09 22:11
           <br>
         </span>
-        Copyright 2015-2016 © Shanghai Jiaxin Purification Equipment Co,. Ltd &nbsp; &nbsp; <a href="http://www.beianbeian.com/" >沪ICP备16004806号-1</a>
+        Copyright 2015-2018 © Shanghai Jiaxin Purification Equipment Co,. Ltd &nbsp; &nbsp; <a href="http://www.beianbeian.com/" >沪ICP备16004806号-1</a>
       </div>
    	</div>
  
