--- a/products/products2/bak/products2_2.html
+++ b/products/products2/bak/products2_2.html
@@ -130,7 +130,7 @@
 			
 			<div class="left" style="background:url(../../files/images/pro.jpg) 0px 0px no-repeat;">
 				<div class="title">
-						<dt>产品与服务 </dt>
+						<dt><a href="../products/products.html"> <font color="#FFFFFF">产品与服务</font> </a> </dt>
 				</div>
 					<div  class="inbox" id="navigation">
 						<ul id ="listUL">
@@ -418,7 +418,7 @@
           Total 0.00694(s) query 1, Time now is:2016-03-09 22:11
           <br>
         </span>
-        Copyright 2015-2016 © Shanghai Jiaxin Purification Equipment Co,. Ltd &nbsp; &nbsp; <a href="http://www.beianbeian.com/" >沪ICP备16004806号-1</a>
+        Copyright 2015-2018 © Shanghai Jiaxin Purification Equipment Co,. Ltd &nbsp; &nbsp; <a href="http://www.beianbeian.com/" >沪ICP备16004806号-1</a>
       </div>
    	</div>
  
